added about and faq

--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -88,11 +88,14 @@
     font-weight: 600
   p
     font-size: 1.5em
-
+  .section-logo
+    width: min(16em, 80%)
   .expander-group
     padding: 2em 0
     hr
       border: 1px solid variables.$dark
+  .team-gallery
+    display: flex
   .fancy-list
     font-size: 1.5em
     font-weight: 600
