--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -15,17 +15,17 @@
     align-self: center
 
   h1
-    font-size: 3.5em
+    font-size: 3em
     text-align: center
     margin: 0.25em 0
     font-weight: 600
   h2
-    font-size: 2.5em
+    font-size: 2em
     text-align: center
     margin: 0.2em 0
     font-weight: 500
   img
-    height: 6em
+    height: 5em
     margin: 0 auto
     justify-self: center
   .fancy-list
@@ -68,14 +68,14 @@
   text-align: center
   width: 100%
   padding: 2em 0
-  overflow: clip
+  overflow: visible
   &-inner
     margin: 0 auto
     width: 80%
     max-width: 80em
 
   h1
-    font-size: 3.5em
+    font-size: 3em
     text-align: center
     margin: 0.25em 0
     padding: 0 0
@@ -89,7 +89,11 @@
   p
     font-size: 1.5em
   .section-logo
-    width: min(16em, 80%)
+    width: min(16em, 50%)
+  .about-us
+    margin: 1em 1.5em
+    justify: center
+    font-size: min(1.7em, 4vw)
   .expander-group
     padding: 2em 0
     hr
