--- a/styles/Expander.module.sass
+++ b/styles/Expander.module.sass
@@ -1,15 +1,18 @@
 @use "variables"
 
 .expander
-  //padding: 2em 0
-  font-size: 1.5em
+  margin-top: 1em
+  margin-bottom: 2em
+  font-size: min(3vw, 1.2em)
 
   .header
     cursor: pointer
     &:hover
       text-decoration: underline
     h1
+      margin-top: 1em
       font-weight: 500
-      font-size: 1.7em
-
-
+      font-size: min(4vw, 1.7em)
+  .text
+    margin-top: 1em
+    margin-bottom: 2em
