update sponsors, speakers, and workshops

--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -73,7 +73,8 @@
     margin: 0 auto
     width: 80%
     max-width: 80em
-
+    &-workshops
+      text-align: left
   h1
     font-size: 3em
     text-align: center
@@ -87,13 +88,16 @@
     padding: 0 0
     font-weight: 600
   p
-    font-size: 1.5em
+    font-size: min(1.7em, 4vw)
   .section-logo
     width: min(16em, 50%)
   .about-us
     margin: 1em 1.5em
     justify: center
     font-size: min(1.7em, 4vw)
+  .sponsors
+    width: 40%
+    margin: 1em
   .expander-group
     padding: 2em 0
     hr
