option based signup page prototype

--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -110,3 +110,11 @@
         height: 0.8em
         padding: 0.1em 0.4em 0.1em 0.2em
 
+.sign-up-choice
+  display: flex
+  justify-self: center
+  > div
+    width: min(90%, 40em)
+  &-outer
+    display: flex
+    justify-content: center
