--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -1,4 +1,6 @@
 @use "variables"
+@use "sass:color"
+
 .site
   box-sizing: border-box
   width: 100%
@@ -13,6 +15,8 @@
     width: 100%
     justify-self: center
     align-self: center
+    & .fancy-list
+      margin-bottom: 2em
 
   h1
     font-size: 3em
@@ -122,3 +126,19 @@
   &-outer
     display: flex
     justify-content: center
+.learn-more
+  color: color.adjust(variables.$dark, $whiteness: 100%)
+  position: absolute
+  bottom: 0
+  width: 100%
+  padding-bottom: 5%
+  a
+    color: inherit
+    text-decoration: none
+    cursor: pointer
+
+  h1
+    font-size: 2.5em
+    font-weight: 300
+  svg
+    height: 2em
