--- a/styles/Button.module.sass
+++ b/styles/Button.module.sass
@@ -1,7 +1,7 @@
 @use "variables"
 
 .button
-  padding: 2em 0
+  padding: 2em 1em
   a
     background: variables.$dark
     color: variables.$light
@@ -14,7 +14,7 @@
 
 
 .button-light
-  padding: 2em 0
+  padding: 2em 1em
   a
     background: variables.$accent
     color: variables.$dark
